# pymagic8

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  README.md  changelog-ci-config.yaml  index.html  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: changelog.yml  docs.yml  tests.yml
docs/: requirements.txt
docs/redirect/: index.html
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html  versions.html
docs/source/api-docs/: index.rst  pymagic9.rst
latest/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
latest/.doctrees/api-docs/: index.doctree
latest/api-docs/: pymagic9.html
src/pymagic9/: __init__.py  pymagic9.py  pymagic9.pyi
tests/: test_pymagic.py
v0.1.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.1.0/.doctrees/: environment.pickle  index.doctree
v0.1.0/.doctrees/api-docs/: index.doctree  pymagic9.doctree
v0.1.0/api-docs/: index.html  pymagic9.html
v0.9.0/: genindex.html  py-modindex.html
v0.9.0/.doctrees/: environment.pickle  index.doctree
v0.9.0/.doctrees/api-docs/: pymagic9.doctree
v0.9.0/_sources/api-docs/: index.rst.txt
v0.9.0/api-docs/: index.html
