# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
# https://github.com/apache/airflow/blob/main/setup.cfg
# https://github.com/mCodingLLC/SlapThatLikeButton-TestingStarterProject/blob/main/setup.cfg

[metadata]
name = pymagic9
version = 0.0.1a
author = Sam Nazarov
author_email = samnnazarov@gmail.com
home-page = https://github.com/sammnnz/pymagic9
description = Python library based on calling the stack of frames at runtime and analyzing the code object of frames
long-description = file: README.md
license = Apache License 2.0
license-file = LICENSE
platform = any
keywords = frame, getframe, nameof, stackframe
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/sammnnz/pymagic9/issues
    Changelog = https://github.com/sammnnz/pymagic9/blob/master/CHANGELOG.md
    Source code = https://github.com/sammnnz/pymagic9

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*
package_dir =
    = src
packages =
    pymagic9
setup_requires =
	setuptools >=42.0

[options.package_data]
pymagic9 = py.typed, *.pyi

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox<4.0.0
    coverage>=5.2
    codecov>=2.1.13

[flake8]
max-line-length = 160