# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
# https://github.com/apache/airflow/blob/main/setup.cfg

[metadata]
name = pymagic9
version = attr: pymagic9.__version__
author = Sam Nazarov
author_email = samnnazarov@gmail.com
home_page = https://github.com/sammnnz/pymagic9
description =
    This is a Python library based on calling of frame's stack at runtime and mainly implements some C# features.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
platform = any
keywords = C#, frame, getframe, isfunctionincallchain, nameof, stackframe
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/sammnnz/pymagic9/issues
    Changelog = https://github.com/sammnnz/pymagic9/blob/master/CHANGELOG.md
    Source code = https://github.com/sammnnz/pymagic9

[options]
zip_safe = false
include_package_data = true
install_requires =
    multipledispatch == 0.6.0
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*, != 3.5.*, < 3.11
package_dir =
    = src
packages =
    pymagic9

[options.extras_require]
testing =
    six==1.13.0
    pytest==4.6.11
    pytest-cov==2.8.1
    coverage==5.2.1
    codecov==2.1.13
    pipenv==2023.7.11
    tox >=3.24.3, <4.0.0
    mypy==0.910
    flake8==3.9.2
    importlib_metadata >=4.13.0, <5
    pre-commit==2.21.0

[options.package_data]
pymagic9 = py.typed, *.pyi

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar